Feat: Add more api endpoints and update json files
