# src/routes/province.route.ts
@@ -1,0 +1,21 @@
+import { Router } from 'express';
+
+import {
+  getProvinces,
+  getProvince,
+  getMunicipalities,
+  getCities,
+  getSubMunicipalities,
+  getBarangays,
+} from '../controllers/province.controller';
+
+const provinceRouter = Router();
+
+provinceRouter.get('/', getProvinces);
+provinceRouter.get('/:provinceCode', getProvince);
+provinceRouter.get('/:provinceCode/municipalities', getMunicipalities);
+provinceRouter.get('/:provinceCode/cities', getCities);
+provinceRouter.get('/:provinceCode/sub-municipalities', getSubMunicipalities);
+provinceRouter.get('/:provinceCode/barangays', getBarangays);
+
+export default provinceRouter;
